# causal-image-embedding

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: autoencoder.py  causal_embedding.py  causal_inference.py  config.py  dataset.py  main_analysis.py  main_experiment.py  naive_embedding.py  raw_embedding.py  visualize.py
tests/: test_autoencoder.py  test_causal_inference.py
